ProjectionTests/Tests/ScriptErrorTests/ActiveScriptError_Originate.baseline
ActiveScriptError_Originate.js(10, 5) JavaScript runtime error: The parameter is incorrect.

Originate: E_INVALIDARG
Restricted Error String: Originate: E_INVALIDARG
Null Restricted Error Reference
Capability SID: (null)
EXCEPINFO scode: 0x80070057
Error Type: WinRT error
Stack info:
frame 0: Anonymous function(), line: 9, characterPosition: 4
frame 1: Global code, line: 2, characterPosition: 1
